test/compile-fail/boost_pfr_disabled_via_macro.cpp
// Copyright (c) 2022 Denis Mikhailov
//
// Distributed under the Boost Software License, Version 1.0. (See accompanying
// file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)

#define BOOST_PFR_ENABLED 0
#include <boost/pfr/core.hpp>

int main() { }

